secondfile/objects/DHStatus_Access_Circuit_Data__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus
-Access Circuit Data</description>
    <fields>
        <fullName>ATT_Gateway_Circuit_ID__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-ATT Gateway Circuit ID</description>
        <label>ATT Gateway Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Circuit_ID__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-Access Circuit ID</description>
        <label>Access Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Logical_Provisioning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning</description>
        <label>DHStatus-Logical Provisioning</label>
        <referenceTo>DHStatus_Logical_Provisioning__c</referenceTo>
        <relationshipLabel>DHStatus-Access Circuit Data</relationshipLabel>
        <relationshipName>DHStatus_Access_Circuit_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_Details__c</fullName>
        <formula>DHStatus_Logical_Provisioning__r.DHStatus_Update_Deal_Hash_Details__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DHStatus-Update Deal Hash Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Gateway_Circuit_ID__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-EC Gateway Circuit ID</description>
        <label>EC Gateway Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICore_Site_ID__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-ICore Site ID</description>
        <label>ICore Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPP_Billing_Identifier__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-IPP Billing Identifier</description>
        <label>IPP Billing Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Line_Activation_Status__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-Private Line Activation Status</description>
        <label>Private Line Activation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USO_Number__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-USO Number</description>
        <label>USO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Access Circuit Data</label>
    <nameField>
        <displayFormat>ACD-{0000}</displayFormat>
        <label>DHStatus-Access Circuit Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Access Circuit Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>